@@ -116,6 +116,7 @@ javascriptcore_sources += \
 	Source/JavaScriptCore/bytecode/PutByIdStatus.h \
 	Source/JavaScriptCore/bytecode/SamplingTool.cpp \
 	Source/JavaScriptCore/bytecode/SamplingTool.h \
+	Source/JavaScriptCore/bytecode/StructureSet.h \
 	Source/JavaScriptCore/bytecode/StructureStubInfo.cpp \
 	Source/JavaScriptCore/bytecode/StructureStubInfo.h \
 	Source/JavaScriptCore/bytecode/ValueProfile.cpp \
@@ -174,16 +175,15 @@ javascriptcore_sources += \
 	Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp \
 	Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp \
 	Source/JavaScriptCore/dfg/DFGSpeculativeJIT.h \
-	Source/JavaScriptCore/dfg/DFGStructureSet.h \
 	Source/JavaScriptCore/dfg/DFGThunks.cpp \
 	Source/JavaScriptCore/dfg/DFGThunks.h \
 	Source/JavaScriptCore/dfg/DFGVariableAccessData.h \
 	Source/JavaScriptCore/heap/AllocationSpace.cpp \
 	Source/JavaScriptCore/heap/AllocationSpace.h \
-    Source/JavaScriptCore/heap/BumpBlock.h \
-    Source/JavaScriptCore/heap/BumpSpace.cpp \
-    Source/JavaScriptCore/heap/BumpSpace.h \
-    Source/JavaScriptCore/heap/BumpSpaceInlineMethods.h \
+	Source/JavaScriptCore/heap/BumpBlock.h \
+	Source/JavaScriptCore/heap/BumpSpace.cpp \
+	Source/JavaScriptCore/heap/BumpSpace.h \
+	Source/JavaScriptCore/heap/BumpSpaceInlineMethods.h \
 	Source/JavaScriptCore/heap/CardSet.h \
 	Source/JavaScriptCore/heap/ConservativeRoots.cpp \
 	Source/JavaScriptCore/heap/ConservativeRoots.h \
@@ -192,7 +192,7 @@ javascriptcore_sources += \
 	Source/JavaScriptCore/heap/Handle.h \
 	Source/JavaScriptCore/heap/HandleHeap.cpp \
 	Source/JavaScriptCore/heap/HandleHeap.h \
-    Source/JavaScriptCore/heap/HeapBlock.h \
+	Source/JavaScriptCore/heap/HeapBlock.h \
 	Source/JavaScriptCore/heap/SlotVisitor.h \
 	Source/JavaScriptCore/heap/HandleStack.cpp \
 	Source/JavaScriptCore/heap/HandleStack.h \
@@ -546,7 +546,7 @@ javascriptcore_sources += \
 	Source/JavaScriptCore/wtf/ByteArray.cpp \
 	Source/JavaScriptCore/wtf/ByteArray.h \
 	Source/JavaScriptCore/wtf/CheckedArithmetic.h \
-    Source/JavaScriptCore/wtf/CheckedBoolean.h \
+	Source/JavaScriptCore/wtf/CheckedBoolean.h \
 	Source/JavaScriptCore/wtf/Compiler.h \
 	Source/JavaScriptCore/wtf/CryptographicallyRandomNumber.cpp \
 	Source/JavaScriptCore/wtf/CryptographicallyRandomNumber.h \
